--- a/model/static/index.html
+++ b/model/static/index.html
@@ -2,9 +2,9 @@
 <head>
 </head>
 <body>
-    tes
+    TIdalSocial Test Page
     <form id="form1" method="POST" action="/url">
-        <input type="url" id="playlist_url" value="https://tidal.com/browse/playlist/3751614e-3827-4860-819c-b9474a000dbb">
+        <input type="url" name="playlist_url" value="https://tidal.com/browse/playlist/3751614e-3827-4860-819c-b9474a000dbb" autofocus size="70">
         <input type="submit">
     </form>
 
@@ -12,17 +12,5 @@
         <iframe src="https://embed.tidal.com/playlists/3751614e-3827-4860-819c-b9474a000dbb?layout=gridify" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 1px; min-height: 100%; margin: 0 auto;"></iframe>
     </div> -->
 
-    <script type="text/javascript">
-    (function () {
-        function E(id) { return document.getElementById(id); }
-        function init(e) {
-            const playlist_url = document.getElementById("playlist_url");
-            playlist_url.focus();
-        }
-
-        setTimeout(init, 0)
-        //document.addEventListener('load', init);
-    })();
-    </script>
 </body>
 </html>
