--- a/model/static/index.html
+++ b/model/static/index.html
@@ -1,16 +1,51 @@
 <html>
 <head>
+    <title>TIdaL Social</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://unpkg.com/http-vue-loader"></script>
+    <script type="module" src="/js/sync.js"></script>
 </head>
 <body>
-    TIdalSocial Test Page
+    TIdaL Social Test Page
     <form id="form1" method="POST" action="/url">
         <input type="url" name="playlist_url" value="https://tidal.com/browse/playlist/3751614e-3827-4860-819c-b9474a000dbb" autofocus size="70">
         <input type="submit">
     </form>
 
-    <!-- <div style="position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%;">
-        <iframe src="https://embed.tidal.com/playlists/3751614e-3827-4860-819c-b9474a000dbb?layout=gridify" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 1px; min-height: 100%; margin: 0 auto;"></iframe>
-    </div> -->
+    <!-- <div style="position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 50em;"> -->
+    <!-- </div> -->
+    <div id="app">
+        <ul id="example-1">
+            <li v-for="item in items" :key="item">
+                <tidal :src="item"></tidal>
+            </li>
+          </ul>
+    </div>
 
+    <script>
+    var app = new Vue({
+        el: '#app',
+        data: {
+            items: []
+        },
+        components: {
+            'app-world': window.httpVueLoader('/js/components/AppWorld.vue'),
+            'tidal': window.httpVueLoader('/js/components/Tidal.vue')
+        },
+    })
+    function handleSubmit(e) {
+        e.preventDefault();
+        const fd = new FormData(e.target);
+        const body = new URLSearchParams(fd)
+        fetch("/url", {method: "post", body})
+            .then(res => res.json())
+            .then(result => {
+                app.items = result.playlists.map(url => url.replace('tidal.com/browse/playlist', 'embed.tidal.com/playlists'));
+            })
+        return false;
+    }
+    document.getElementById("form1").addEventListener("submit", handleSubmit)
+    </script>
 </body>
 </html>
