--- a/static/index.html
+++ b/static/index.html
@@ -30,8 +30,7 @@
             items: []
         },
         components: {
-            'app-world': window.httpVueLoader('/js/components/AppWorld.vue'),
-            'tidal': window.httpVueLoader('/js/components/Tidal.vue')
+            'tidal': window.httpVueLoader('/components/Tidal.vue')
         },
     })
     function handleSubmit(e) {
