--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://unpkg.com/http-vue-loader"></script>
     <script type="module" src="/js/sync.js"></script>
+    <style>
+        body {
+            background-color: #17171a;
+        }
+    </style>
 </head>
 <body>
     TIdaL Social Test Page
@@ -16,11 +21,11 @@
     <!-- <div style="position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 50em;"> -->
     <!-- </div> -->
     <div id="app">
-        <ul id="example-1">
-            <li v-for="item in items" :key="item">
-                <tidal :src="item"></tidal>
-            </li>
-          </ul>
+        <section id="example-1">
+            <article v-for="item in items" :key="item">
+                <tidal :id="item"></tidal>
+            </article>
+          </section>
     </div>
 
     <script>
