--- a/static/index.html
+++ b/static/index.html
@@ -55,12 +55,20 @@
             margin-bottom: 3px;
             vertical-align:middle;
         }
+        div.footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            color: gray;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <h3><img class="logo" src="/favicon-32x32.png"> TIDAL SOCIAL</h3>
     <form id="form1" method="POST" action="/url">
-        <input type="url" id="playlist_url" name="playlist_url" placeholder="Playlist or mix URL" autocomplete="off" value="https://tidal.com/browse/playlist/3751614e-3827-4860-819c-b9474a000dbb" autofocus size="70">
+        <input type="url" required id="playlist_url" name="playlist_url" placeholder="Playlist or mix URL" autocomplete="off" autofocus size="70">
         <input type="submit">
     </form>
 
@@ -69,7 +77,11 @@
             <article v-for="item in items" :key="item">
                 <tidal :id="item"></tidal>
             </article>
-          </section>
+        </section>
+    </div>
+
+    <div class="footer">
+        <p>Copyright (c) 2021 Lionello Lunesu. This project is not affiliated with TIDAL or ASPIRO AB.</p>
     </div>
 
     <script>
