--- a/static/index.html
+++ b/static/index.html
@@ -52,8 +52,8 @@
             text-align: center;
         }
         img.logo {
-            margin-bottom: 3px;
-            vertical-align:middle;
+            vertical-align: middle;
+            height: 2em;
         }
         div.footer {
             position: fixed;
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <h3><img class="logo" src="/favicon-32x32.png"> TIDAL SOCIAL</h3>
+    <h3><img class="logo" src="/favicon.svg"> TIDAL SOCIAL</h3>
     <form id="form1" method="POST" action="/url">
         <input type="url" required id="playlist_url" name="playlist_url" placeholder="Playlist or mix URL" autocomplete="off" autofocus size="70">
         <input type="submit">
