--- a/static/index.html
+++ b/static/index.html
@@ -72,7 +72,8 @@
     <h3><img class="logo" src="/favicon.svg" /> TIDAL SOCIAL</h3>
     <form id="form1" method="POST" action="/url">
       <input
-        type="url"
+        type="text"
+        pattern="(https:\/\/)?(listen\.|embed\.)?tidal\.com\/.+"
         required
         id="playlist_url"
         name="playlist_url"
@@ -121,6 +122,16 @@
           return hashCash(body, 1 + nonce, limit)
         })
       }
+      function makeEmbedUrl(id) {
+        switch (id.length) {
+          case 36:
+            return "https://embed.tidal.com/playlists/" + id
+          case 30:
+            return "https://embed.tidal.com/mix/" + id
+          default:
+            return "https://embed.tidal.com/artist/" + id
+        }
+      }
       function handleSubmit(e) {
         e.preventDefault()
         document.getElementById("playlist_url").blur()
@@ -132,7 +143,7 @@
           .then((body) => fetch("/url", { method: "post", body }))
           .then((res) => res.json())
           .then((result) => {
-            app.items = result.playlists
+            app.items = result.playlists.map(makeEmbedUrl)
           })
         return false
       }
