--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
         width: 100%;
         color: gray;
       }
-      input.url {
+      #url {
         display: none;
       }
     </style>
